--- a/CameraService/CameraSharerer/Resources/layout/activity_main.axml
+++ b/CameraService/CameraSharerer/Resources/layout/activity_main.axml
@@ -14,4 +14,9 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:text="@string/openCamera" />
+    <Button
+        android:id="@+id/btnSendPicture"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/sendPicture" />
 </LinearLayout>
